@@ -1206,14 +1206,23 @@ public class Reaction extends AbstractNamedSBase implements CallableSBase,
 		unsetKineticLaw();
 		this.kineticLaw = kineticLaw;
 		if (this.kineticLaw.isSetListOfLocalParameters()) {
-			// Clear the mapping from the kinetic law to its local parameters:
+			/*
+			 * Before we can register the new kineticLaw as a child of this
+			 * reaction, we first have to clear the mapping from the kineticLaw 
+			 * to its local parameters (if there are any). Local parameters are 
+			 * registered at the level of the kineticLaw, i.e., besides all maps 
+			 * on the level of the model, kineticLaw contains its own map. 
+			 * Clearing this map is required because the registerChild method 
+			 * would recursively find all elements that have an id and try to 
+			 * the mapping. However, since all these local parameters have been 
+			 * existing already, this would cause an exception. The reason is 
+			 * that we could not distinguish between already correctly registered 
+			 * local parameters and new local parameters with an identical 
+			 * identifier.
+			 */
 			for (LocalParameter lp : this.kineticLaw.getListOfLocalParameters()) {
 				this.kineticLaw.registerLocalParameter(lp, true);
 			}
-			/* 
-			 * This is required because in the next step we would register
-			 * all local parameters again, which would cause an exception.
-			 */
 		}
 		setThisAsParentSBMLObject(this.kineticLaw);
 	}
